--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Product-ishh
+email: Inandepu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  "From writing code to exploring product — I'm a software engineer dipping my toes into product management. This is my own little space for getting a little product-ish, by sharing all the learning chaos as I go from just 'dipping my toes' to hopefully something like 'knee-deep'."
+  # Write an awesome description for your new site here. You can edit this
+  # line in _config.yml. It will appear in your document head meta (for
+  # Google search results) and in your feed.xml site description.
 twitter_username: username
-github_username: username
+github_username: CloverX4
 minimal_mistakes_skin: default
 search: true
 
@@ -58,9 +59,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Indira Nandepu"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "From writing code to exploring product — I'm a software engineer dipping my toes into product management. This is my own little space for getting a little product-ish, by sharing all the learning chaos as I go from just 'dipping my toes' to hopefully something like 'knee-deep'."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
