--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Product-ishh
 email: Inandepu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  "From writing code to exploring product — trynna get a little product-ishh!"
+  "From writing code to exploring product — trynna get a little product-ishh! Building for a transition in to Product Management."
   # Write an awesome description for your new site here. You can edit this
   # line in _config.yml. It will appear in your document head meta (for
   # Google search results) and in your feed.xml site description.
