--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ search: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+theme: minimal-mistakes-jekyll
+# Include the custom CSS
+sass:
+  sass_dir: assets/css
+  style: compressed
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -36,6 +41,7 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
+  - _includes
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
