revert custom css

--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,8 @@ search: true
 
 # Build settings
 markdown: kramdown
-theme: minimal-mistakes-jekyll
-# Include the custom CSS
-sass:
-  sass_dir: assets/css
-  style: compressed
+remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -40,7 +37,6 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-  - _includes
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -105,8 +101,7 @@ defaults:
       comments: true
       share: true
       related: true
-      header:
-        include: head.html
+
   # _pages
   - scope:
       path: "_pages"
